<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:id="@+id/content_common"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

        <TextView
                android:text="@string/content_main_results1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView2" android:textStyle="normal|bold"
                android:textAlignment="center"/>
        <TextView
                android:text="@string/content_main_results2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView4" android:textStyle="normal|bold"
                android:textAlignment="viewStart"/>
        <Button
                android:text="@string/content_main_results3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/result_button_1_1"
                android:onClick="onResultButtonClick"/>

        <Button
            android:id="@+id/result_button_1_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onResultButtonClick"
            android:text="@string/content_main_results4" />

        <Button
            android:id="@+id/result_button_1_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onResultButtonClick"
            android:text="@string/content_main_results5" />

        <Button
            android:id="@+id/result_button_1_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onResultButtonClick"
            android:text="@string/content_main_results6" />
        <TextView
                android:text="@string/content_main_results7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView5" android:textStyle="normal|bold"
                android:textAlignment="viewStart"/>

        <Button
            android:id="@+id/result_button_2_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onResultButtonClick"
            android:text="@string/content_main_results8" />

        <Button
            android:id="@+id/result_button_2_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onResultButtonClick"
            android:text="@string/content_main_results9" />

        <Button
            android:id="@+id/result_button_2_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onResultButtonClick"
            android:text="@string/content_main_results10" />

        <Button
            android:id="@+id/result_button_2_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onResultButtonClick"
            android:text="@string/content_main_results11" />

        <Button
            android:id="@+id/result_button_2_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onResultButtonClick"
            android:text="@string/content_main_results12" />

        <Button
            android:id="@+id/result_button_2_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onResultButtonClick"
            android:text="@string/content_main_results13" />

        <Button
            android:id="@+id/result_button_2_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onResultButtonClick"
            android:text="@string/content_main_results14" />

        <Button
            android:id="@+id/result_button_2_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onResultButtonClick"
            android:text="@string/content_main_results15" />
    </LinearLayout>
</ScrollView>